fixed display of ranked list on small screens

--- a/src/sass/components/_blog-post.scss
+++ b/src/sass/components/_blog-post.scss
@@ -175,10 +175,35 @@
   }
 
   .article {
-    grid-template-columns: min-content minmax(0, 30rem);
-    grid-template-rows: auto 1fr;
+    grid-template-columns: 1fr;
     gap: 0 2rem;
     position: relative;
+
+    &__img {
+      width: 100%;
+      height: 20rem;
+    }
+
+    &__metadata,
+    &__footer {
+      display: none;
+    }
+    @include mq(small) {
+      grid-template-columns: min-content minmax(0, 30rem);
+      grid-template-rows: auto 1fr;
+
+      &__img {
+        width: 15rem;
+        height: 100%;
+        grid-column: 1;
+        grid-row: 2 / 3;
+      }
+
+      &__content {
+        grid-column: 2;
+        grid-row: 2 / 3;
+      }
+    }
 
     &::before {
       counter-increment: article-items;
@@ -194,23 +219,6 @@
       grid-column: 1;
       grid-row: 1;
       z-index: 2;
-    }
-
-    &__img {
-      grid-column: 1;
-      grid-row: 2 / 3;
-      width: 15rem;
-      height: 100%;
-    }
-
-    &__content {
-      grid-column: 2;
-      grid-row: 2 / 3;
-    }
-
-    &__metadata,
-    &__footer {
-      display: none;
     }
   }
 }
